--- a/.github/workflows/boost-dev.yml
+++ b/.github/workflows/boost-dev.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Build Image
-        run: docker build --tag "lindycoder/manual-demo42:latest" .
+      - name: Pull Image
+        run: docker pull lindycoder/manual-demo42:latest
       - name: Run Native Scanner
         uses: boostsecurityio/boostsec-scanner-github@v4
         env:
